crates/keron-lang/tests/corpus/errors/parse/type_padded_nullable_run.keron
# A nullable run must be adjacent: `String ? ?` is a stuttered
# annotation, not a normalized form.
val x: String ? ? = null
